--- a/_config.pug
+++ b/_config.pug
@@ -2,21 +2,29 @@
   version      = '0.0.2'
   revision     = '2511.01'
 
+  title        = 'Dove'
+  description  = 'Dove is a theme development project.'
+  //- # title       : # the title of your site (best without the punctuation dot).
+  //- # description : # a short description of your site's purpose.
+
+  author       = 'Techie Joe'
+
+  base_url     = '/dove'
+  home_url     = '/dove'
+  
   live_url     = 'https://techie-joe.github.io/dove'
   source_url   = 'https://github.com/techie-joe/dove'
 
-  site_url     = '/dove'
-  home_url     = '/dove'
-  
-  title        = 'Dove'
-  description  = 'Dove is a theme development project.'
-  author       = 'Techie Joe'
-  
   charset      = 'utf-8'
   lang         = 'en-US'
   theme_color  = '#222'
-  color_scheme = 'light dark'
-  
+  color_scheme = 'light dark'  
   ghost        = btoa([ "localhost", "techie-joe.github.io" ])
+
   //- google_analytics     = 'google_analytics_id'
+  //- # google_analytics: # your Google Analytics tracking ID.
+  //- # to track your website using Google Analytics.
+
   //- cloudflare_analytics = 'cloudflare_analytics_id'
+  //- # cloudflare_analytics: # your Cloudflare Analytics tracking ID.
+  //- # to track your website using Cloudflare Analytics.
