--- a/_source/mallet/index.html.pug
+++ b/_source/mallet/index.html.pug
@@ -9,6 +9,7 @@ block content
 block prepend content
   block hero-box
     style.
+      .hero-box-1 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
       .hero-box-1 { padding:0 }
       .hero-box-1 .site-description {
         margin-left:5.3rem;
@@ -25,6 +26,7 @@ block prepend content
 block prepend content
   block hero-box
     style.
+      .hero-box-2 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
       .hero-box-2 {
         margin:.5rem 0;
         padding: 1px 2rem 3rem;
