--- a/_scss/_dove/helper.scss
+++ b/_scss/_dove/helper.scss
@@ -2,6 +2,9 @@
 .serif { font-family: 'Times New Roman', 'Times', serif }
 .mono { font-family: 'Courier New', 'Courier', monospace, monospace }
 
+.small { font-size:.9em }
+.smaller { font-size:.8em }
+
 .scrollable{overflow:auto}
 
 details summary,
