fix mallet footer

--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -33,7 +33,7 @@ layout: mallet
         </nav>
         <article id="_article">{{ content }}</article>
         <footer class="footer">
-          {% include footer.md %}
+          {% include footer.html %}
         </footer>
       </div>
       <div class="_theme_switch _needjs">
