--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -34,7 +34,7 @@ layout: mallet
         <article id="_article">{{ content }}</article>
         <footer class="footer">
           {% if page.use_footer == false %}{%- else %}
-            {% if not page.use_footer contains 'edit_link_only' %}
+            {% if page.use_footer contains 'edit_link_only' %}{%- else %}
               <hr/><p><code>// footer : {{ page.use_footer | default: '(undefined)' }}</code></p>
             {%- endif %}
             {% if site.github.private != true and site.github.license %}
