--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -21,14 +21,21 @@ layout: mallet
   <body>
     <main id="_main" class="_app __fadein">
       <div id="_layout" class="container-lg px-3 markdown-body">
-        <header class="header"><nav id="_header-bar"><div class="_flex"><div class="_flex-main">
-          <div class="_logo"><a href="{{ site.github.url }}">{{ site.title | default: '(untitled)' }}</a></div>
+        <header class="header">
+          {% if page.use_header == false %}
+          <style>.header{display:none !important}</style>
+          {%- else %}
+          <nav id="_header-bar"><div class="_flex"><div class="_flex-main">
+            <div class="_logo"><a href="{{ site.github.url }}">{{ site.title | default: '(untitled)' }}</a></div>
+          </div></div></nav>
+          {%- endif %}
+        </header>
         </header>
         <nav class="_nav">
           {% if page.use_nav == false %}
           <style>._nav{display:none !important}</style>
           {%- else %}
-          <div><code>// nav</code></div>
+          <div><code>// nav : {{ page.use_nav | default: '(undefined)' }}</code></div>
           {%- endif %}
         </nav>
         <article id="_article">{{ content }}</article>
