--- a/_includes/gohome.html
+++ b/_includes/gohome.html
@@ -1,1 +1,1 @@
-<a href="{{ site.github.url }}" class="button text-secondary _bt -flat" title="Go to Home Page">Home</a>
+<a href="{{ site.github.url }}" class="button text-secondary _bt -flat -l" title="Go to Home Page">Home</a>
