--- a/_source/mallet/404.html.pug
+++ b/_source/mallet/404.html.pug
@@ -12,7 +12,7 @@ block content
   div(style="margin-top:3rem")
   hr/
   p
-    +back_button.button.text-secondary._bt.-l.-flat
+    +back_button.button.text-secondary._bt.-flat.-l
     +l
-    +gohome_button.button.text-secondary._bt.-l.-flat
+    +gohome_button.button.text-secondary._bt.-flat.-l
 block footer
