--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -40,6 +40,8 @@ layout: mallet
         </nav>
         <article id="_article">{{ content }}</article>
         <footer class="footer">
+          {% include footer.md %}
+          <hr/>
           {% if page.use_footer == false %}{%- else %}
             {% if page.use_footer contains 'edit_link_only' %}{%- else %}
             <hr/><p><code>// footer : {{ page.use_footer | default: '(undefined)' }}</code></p>
