--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -52,7 +52,7 @@ include /_config
 include _mixins
 
 mixin custom_head
-  |<!-- custom-head -->
+  |<!-- layout_head -->
   //- +fonts
   //- +icons
   //- +manifest
@@ -76,7 +76,6 @@ mixin manifest
 //- ==============================================================
 
 mixin custom_body
-  |<!-- custom-body -->
   +copyright
   +credit
   +themejs
