update dove base_url

--- a/_includes/manifest.html
+++ b/_includes/manifest.html
@@ -1,1 +1,1 @@
-<link rel="manifest" href="{{ site.github.url }}/manifest.json?r={{ site.revision }}.{{ site.github.build_revision }}" />
+<link rel="manifest" href="{{ site.base_url }}/manifest.json?r={{ site.revision }}.{{ site.github.build_revision }}" />
