--- a/_includes/themejs.html
+++ b/_includes/themejs.html
@@ -1,2 +1,2 @@
 <script>window.ghost='{{ site.ghost }}';</script>
-<script type="text/javascript" src="{{ site.github.url }}/assets/themejs/themejs_v2.0.js?r={{ site.revision }}.{{ site.github.build_revision }}"></script>
+<script type="text/javascript" src="{{ site.base_url }}/assets/themejs/themejs_v2.0.js?r={{ site.revision }}.{{ site.github.build_revision }}"></script>
