update nav_common home_url

--- a/_includes/nav_common.html
+++ b/_includes/nav_common.html
@@ -1,3 +1,3 @@
 <a href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length>1?h.back():w.location.href='/';})(window)" class="button text-secondary _bt -flat -l" title="Back to previous page">👈 Back</a>
-<a href="{{ site.base_url }}" class="button text-secondary _bt -flat -l" title="Go to Home Page">Home</a>
-<a href="{{ site.base_url }}/pages" class="button text-secondary _bt -flat -l" title="Go to Pages">Pages</a>
+<a href="{{ site.home_url }}" class="button text-secondary _bt -flat -l" title="Go to Home Page">Home</a>
+<a href="{{ site.home_url }}/pages" class="button text-secondary _bt -flat -l" title="Go to Pages">Pages</a>
