update mallet layout

--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -47,7 +47,7 @@ article {
   }
 }
 .footnotes {border:none}
-.footer {margin-top:3rem;margin-bottom:6rem}
+._footer {margin-top:3rem;margin-bottom:6rem}
 ._theme_switch { font-size:1.5em }
 ._copyright_text,
 ._credit_link { background-color:#ddd !important }
