--- a/_source/_layouts/nova.pug
+++ b/_source/_layouts/nova.pug
@@ -10,7 +10,7 @@ block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
     |<!-- page.path   : !{path} -->
-    |<!-- page.layout : dove/pugs/!{layout} -->
+    |<!-- page.layout : dove/_source/_layouts/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
