--- a/_source/_layouts/prime.pug
+++ b/_source/_layouts/prime.pug
@@ -14,7 +14,7 @@ block html
   doctype html
   html(lang=lang||'en-US' class=htmlClass.join(' '))
     |<!-- path   : !{path} -->
-    |<!-- layout : dove/pugs/!{layout} -->
+    |<!-- layout : dove/_source/_layouts/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
       |<!-- Begin Jekyll SEO tag v2.8.0 -->
