--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="_{{ page.layout }}_layout">
+<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="_{{ page.layout | default: 'html' }}_layout">
   <!-- path   : {{ page.path }} -->
   <!-- layout : dove/_layouts/{{ page.layout }} -->
   <head>
