update mallet layout

--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -16,7 +16,7 @@
   <body>
     <div class="_views">
       <div class="_view _app __fadein">
-        <div id="_layout" class="_layout container-lg px-3 markdown-body">
+        <div id="_layout" class="_view_layout container-lg px-3 markdown-body">
           <header class="header">
             {% if page.use_header == false -%}
             <style>.header{display:none !important}</style>
