--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -37,6 +37,7 @@ article {
     height:1.4em;
     width:1.4em;
   }
+  h1,h2,h3,h4,h5,h6 { margin-top:1.5em }
 }
 .markdown-body {
   blockquote { border-left:.5rem solid;box-shadow:none }
