--- a/_layouts/prime.html
+++ b/_layouts/prime.html
@@ -7,7 +7,7 @@
     {% seo %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/primer/css/style.css?v={{ site.github.build_revision }}" />
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/primer/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
     {% include layout_head.html %}
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
   </head>
