--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -39,7 +39,7 @@ block content
   nav: p
       b Dove
       +_bull
-      +_a([live_url,'md'].join('/'))| !{site_title}.md
+      +_a([base_url,'md'].join('/'))| !{site_title}.md
       +_bull
       +_a(source_url)(target="_edit")| Repository
       +_bull
