--- a/_config.pug
+++ b/_config.pug
@@ -1,6 +1,6 @@
 -
-  version      = '0.0.2'
-  revision     = '2511.01'
+  version      = '0.0.3'
+  revision     = '2511.03'
 
   title        = 'Dove'
   description  = 'Dove is a theme development project.'
@@ -19,7 +19,7 @@
   lang         = 'en-US'
   theme_color  = '#222'
   color_scheme = 'light dark'  
-  ghost        = btoa([ "localhost", "techie-joe.github.io" ])
+  ghost        = btoa([ "localhost", "localhost:4000", "techie-joe.github.io" ])
 
   //- google_analytics     = 'google_analytics_id'
   //- # google_analytics: # your Google Analytics tracking ID.
