--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -143,7 +143,7 @@ mixin edit_link(path)
   | #[a(href=`${source_url}/edit/main/_pugs/${path}.pug` target="_edit")| Improve this page].
 
 mixin site_nav(sub)
-  - sub_url = [home_url,sub].join('/')+'/'
+  - sub_url = [base_url,sub].join('/')+'/'
   b !{capitalize(sub)}
   +l
   +isvg(svgi.angle)
