--- a/_source/_layouts/mallet.pug
+++ b/_source/_layouts/mallet.pug
@@ -35,7 +35,7 @@ block html
             header.header
               block header
                 //- p: code // header
-                ._logo: a(href=home_url) #{site_title}
+                +logo
             nav._nav
               block nav
                 p: code // nav
