--- a/_source/_layouts/prime.pug
+++ b/_source/_layouts/prime.pug
@@ -35,7 +35,7 @@ block html
           .container-lg.px-3.my-5.markdown-body
             block header
               //- p: code // header
-              h1._logo: a(href=home_url) #{site_title}
+              h1._logo: a(href=home_url+'/') #{site_title}
             nav._nav: ._layout
               block nav
                 p: code // nav
