--- a/_source/prime/404.html.pug
+++ b/_source/prime/404.html.pug
@@ -10,8 +10,5 @@ block content
       h2 Oops! Nothing found
       p #{ description }
   +thin_hr
-  p
-    +back_button.button.text-secondary
-    +l
-    +gohome_button.button.text-secondary
+  p: +nav_common
 block footer
