--- a/_source/core/404.html.pug
+++ b/_source/core/404.html.pug
@@ -11,8 +11,5 @@ block content
       p #{ description }
   div(style="margin-top:3rem")
   hr/
-  p
-    +back_button.button.text-secondary
-    +l
-    +gohome_button.button.text-secondary
+  p: +nav_common
 block footer
