--- a/_source/_layouts/core.pug
+++ b/_source/_layouts/core.pug
@@ -2,7 +2,7 @@ include _main
 block vars
   -
     layout = 'core'
-    htmlClass = ['_core_layout']
+    htmlClass = ['_core_html']
     bodyClass = []
     mainClass = []
 block update_vars
