--- a/_source/_layouts/prime.pug
+++ b/_source/_layouts/prime.pug
@@ -3,10 +3,8 @@ mixin thin_hr
   hr.thin.border-gray-light/
 block vars
   -
-    color_scheme = 'light'
-  -
     layout = 'prime'
-    htmlClass = ['_prime_layout']
+    htmlClass = ['_prime_html']
     bodyClass = []
     mainClass = []
 block update_vars
