--- a/_source/_layouts/nova.pug
+++ b/_source/_layouts/nova.pug
@@ -2,7 +2,7 @@ include _main
 block vars
   -
     layout = 'nova'
-    htmlClass = ['_nova_layout']
+    htmlClass = ['_nova_html']
     bodyClass = []
     mainClass = []
 block update_vars
