--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -39,7 +39,12 @@ article {
   }
 }
 .markdown-body {
-  h1,h2,h3,h4,h5,h6 { margin-top:1.5em }
+  h1 { margin-top:1.1em }
+  h2 { margin-top:1.2em }
+  h3 { margin-top:1.3em }
+  h4 { margin-top:1.4em }
+  h5 { margin-top:1.5em }
+  h6 { margin-top:1.6em }
   blockquote { border-left:.5rem solid;box-shadow:none }
   summary { margin:0 }
   table {
