--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -58,6 +58,7 @@ article {
 ._theme_switch { font-size:1.5em }
 ._copyright_text,
 ._credit_link { background-color:#ddd !important }
+.border-gray-light { border-color: rgba(128, 128, 128, 0) !important }
 //---------------------------------------------------------------
 ._dark {
   .hero { color:#fff }
