--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -7,8 +7,6 @@ include /_config
   today = now.toGMTString()
   year  = now.getFullYear()
 
-  revision = [revision,now.getHours()*100+now.getMinutes()*100+now.getSeconds()].join('.')
-
   js   = {
     //- javascripts
     goBack      : "(function(w){var h=w.history;w.opener?w.close():h.length>1?h.back():w.location.href='/';})(window)",
@@ -49,9 +47,12 @@ include /_config
   capitalize = s => s.replace(/\w\S*/g, w => w[0].toUpperCase() + w.slice(1).toLowerCase());
 
 //- ==============================================================
+
 include _mixins
 
-mixin custom_head
+//- ==============================================================
+
+mixin layout_head
   |<!-- layout_head -->
   //- +fonts
   //- +icons
@@ -75,7 +76,7 @@ mixin manifest
 
 //- ==============================================================
 
-mixin custom_body
+mixin layout_body
   +copyright
   +credit
   +themejs
@@ -83,13 +84,17 @@ mixin custom_body
   +google_analytics
 
 //- ==============================================================
+
+mixin edit_link(path)
+  | This site is open source.
+  | #[a(href=`${source_url}/edit/main/_source/${path}.pug`)| Improve this page].
+
 mixin copyright
   ._copyright
     span._copyright_text| @ by #{author} !{year}
 
 mixin credit
-  ._credit
-    a._credit_link(href='https://techie-joe.github.io/dove')| ✨ Made with Dove
+  ._credit: a._credit_link(href='https://techie-joe.github.io/dove')| ✨ Made with Dove
 
 mixin theme_switch(title='Change Theme (Alt+T)')
   ._theme_switch._needjs: a(href='#' onclick!=onclick(js.themeChange) title=title)
@@ -122,51 +127,7 @@ mixin fouc
       });
     })();
 
-//- ==============================================================
-
-mixin _bull_
-  +l
-  +itext|&bull;
-  +l
-
-mixin _i_
-  +l
-  +isvg(svgi.angle)
-  +l
-
-mixin thin_hr
-  hr.thin.border-gray-light/
-
-mixin logo
-  ._logo
-    a(href=home_url+'/') #{site_title}
-
-mixin nav_common
-  a(href="?back" onclick=onclick(js.goBack) title="Back to previous page").button.text-secondary._bt.-flat.-l 👈 Back
-  a(href=home_url+'/' title="Go to Home Page").button.text-secondary._bt.-flat.-l Home
-  a(href=home_url+'/pages' title="Go to Pages").button.text-secondary._bt.-flat.-l Pages
-  a(href=home_url+'/posts' title="Go to Posts").button.text-secondary._bt.-flat.-l Posts
-
-mixin edit_link(path)
-  | This site is open source.
-  | #[a(href=`${source_url}/edit/main/_source/${path}.pug` target="_edit")| Improve this page].
-
-mixin site_nav(sub)
-  - sub_url = [base_url,sub].join('/')+'/'
-  b !{capitalize(sub)}
-  +_i_
-  +_a(sub_url+"preview.html")| Preview
-  +_a(sub_url+"legacy.html")| Legacy
-  +_bull_
-  +_a(sub_url)| Home
-  +_a(sub_url+"page.html")| Page
-  +_a(sub_url+"404.html")| 404
-
-mixin site_footer
-  b !{author}'s
-  +_i_
-  +_a('https://techie-joe.github.io')| Website
-  +_bull_
-  +_a('https://github.com/techie-joe')| Profile
-  +_bull_
-  +_a(['/nova/site/themejs'].join('/'))| ThemeJs
+mixin capture(id='')
+  !=`{% capture ${id} %}`
+  block
+  !='{% endcapture %}'
